--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  node: circleci/node@3.0.0
+
 commands:
   run-tox:
     description: "Run tox"
@@ -10,6 +13,8 @@ commands:
         type: string
         default: "16,17,18,20,21,22,23,24,30,31,32,33,34,35,40,41,latest"
     steps:
+      - node/install:
+          node-version: '14.18.1'
       - checkout
       - run: pip install --user tox
       - run: tox -e "<<parameters.version>>-sphinx{<<parameters.sphinx-version>>}"
